--- a/App.config
+++ b/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
   <connectionStrings>
-    <add name="ConnectionString" connectionString="Data Source=C:\Users\Ritch\source\repos\CurrencyConverter_Static\CurrencyConverter_Static\Database\CurrencyConverter.mdf;Integrated Security=True" providerName="sqlserver"/>
+    <add name="ConnectionString" connectionString="Data Source=(localDB)\MSSQLLocalDb;AttachDbFilename=C:\Users\Ritch\source\repos\CurrencyConverter_Static\CurrencyConverter_Static\Database\CurrencyConverter.mdf;Integrated Security=True;TrustServerCertificate=True;" providerName="sqlserver"/>
   </connectionStrings>
 </configuration>
